examples/flutter/flutter_eap/lib/src/ffi/eap_client_bindings.dart


  late final FlutterEapIsInitialized isInitialized;
  late final FlutterEapGetInstance getInstance;
  late final FlutterEapSetCallbacks setCallbacks;
  late final FlutterEapClearCallbacks clearCallbacks;
  late final FlutterEapDestroy destroy;
  late final FlutterEapConnect connect;
  late final FlutterEapDisconnect disconnect;
  late final FlutterEapEnableStream enableGaze;
  late final FlutterEapEnableStream enablePositioning;
  late final FlutterEapRequestVersion requestVersion;
  late final FlutterEapEnableStream enableControl;
  late final FlutterEapSendControl sendControl;
  late final FlutterEapSendDisplayInfo sendDisplayInfo;
  late final FlutterEapStartCalibration startCalibration;
  late final FlutterEapCollectCalibrationPoints collectCalibrationPoints;
  late final FlutterEapAbortCalibration abortCalibration;
  late final FlutterEapEnableStream enableVideo;
  late final FlutterEapEnableStream enableLogging;
  late final FlutterEapUploadFile uploadFile;
  late final FlutterEapCancelUpload cancelUpload;
  // feedUsbData, getPendingWrite, clearPendingWrite REMOVED
  late final FlutterEapGetState getState;
  late final FlutterEapGetLastError getLastError;

  /// Multi-engine callback fan-out (all pull-mode platform bridges export
  /// these; null on iOS and against older single-slot desktop binaries).
  late final FlutterEapAddCallbacks? addCallbacks;
  late final FlutterEapAddCallbacksEngine? addCallbacksEngine;
  late final FlutterEapRemoveCallbacks? removeCallbacks;
  late final FlutterEapFree? nativeFree;

  /// Skyle Link symbols (shared link glue, all platforms). Null when the
  /// loaded shim predates Skyle Link support.
  late final FlutterEapLinkGlueInstall? linkGlueInstall;
  late final FlutterEapSetIdentity? setLinkIdentity;
  late final FlutterEapSetSupervisorEnabled? setSupervisorEnabled;
  late final FlutterEapGetSupervisorMode? getSupervisorMode;
  late final FlutterEapLinkSetSuspended? linkSetSuspended;
  late final FlutterEapGetSuspensionState? getSuspensionState;

  /// Native function pointer for flutter_eap_free, suitable for
  /// [NativeFinalizer] / [Pointer.asTypedList] finalizer parameter.
  late final Pointer<NativeFinalizerFunction>? nativeFreeFinalizer;

  EapClientBindings(this._dylib) {
    isInitialized = _dylib.lookup<NativeFunction<FlutterEapIsInitializedNative>>('flutter_eap_is_initialized').asFunction();

    getInstance = _dylib.lookup<NativeFunction<FlutterEapGetInstanceNative>>('flutter_eap_get_instance').asFunction();

    setCallbacks = _dylib.lookup<NativeFunction<FlutterEapSetCallbacksNative>>('flutter_eap_set_callbacks').asFunction();

    clearCallbacks = _dylib.lookup<NativeFunction<FlutterEapClearCallbacksNative>>('flutter_eap_clear_callbacks').asFunction();

    destroy = _dylib.lookup<NativeFunction<FlutterEapDestroyNative>>('flutter_eap_destroy').asFunction();

    connect = _dylib.lookup<NativeFunction<FlutterEapConnectNative>>('flutter_eap_connect').asFunction();

    disconnect = _dylib.lookup<NativeFunction<FlutterEapDisconnectNative>>('flutter_eap_disconnect').asFunction();

    enableGaze = _dylib.lookup<NativeFunction<FlutterEapEnableStreamNative>>('flutter_eap_enable_gaze').asFunction();

    enablePositioning = _dylib.lookup<NativeFunction<FlutterEapEnableStreamNative>>('flutter_eap_enable_positioning').asFunction();

    requestVersion = _dylib.lookup<NativeFunction<FlutterEapRequestVersionNative>>('flutter_eap_request_version').asFunction();

    enableControl = _dylib.lookup<NativeFunction<FlutterEapEnableStreamNative>>('flutter_eap_enable_control').asFunction();

    sendControl = _dylib.lookup<NativeFunction<FlutterEapSendControlNative>>('flutter_eap_send_control').asFunction();

    sendDisplayInfo = _dylib.lookup<NativeFunction<FlutterEapSendDisplayInfoNative>>('flutter_eap_send_display_info').asFunction();

    startCalibration = _dylib.lookup<NativeFunction<FlutterEapStartCalibrationNative>>('flutter_eap_start_calibration').asFunction();

    collectCalibrationPoints = _dylib.lookup<NativeFunction<FlutterEapCollectCalibrationPointsNative>>('flutter_eap_collect_calibration_points').asFunction();

    abortCalibration = _dylib.lookup<NativeFunction<FlutterEapAbortCalibrationNative>>('flutter_eap_abort_calibration').asFunction();

    enableVideo = _dylib.lookup<NativeFunction<FlutterEapEnableStreamNative>>('flutter_eap_enable_video').asFunction();

    enableLogging = _dylib.lookup<NativeFunction<FlutterEapEnableStreamNative>>('flutter_eap_enable_logging').asFunction();

    uploadFile = _dylib.lookup<NativeFunction<FlutterEapUploadFileNative>>('flutter_eap_upload_file').asFunction();

    cancelUpload = _dylib.lookup<NativeFunction<FlutterEapCancelUploadNative>>('flutter_eap_cancel_upload').asFunction();

    // feedUsbData, getPendingWrite, clearPendingWrite lookups REMOVED

    getState = _dylib.lookup<NativeFunction<FlutterEapGetStateNative>>('flutter_eap_get_state').asFunction();

    getLastError = _dylib.lookup<NativeFunction<FlutterEapGetLastErrorNative>>('flutter_eap_get_last_error').asFunction();

    // Free memory allocated by the C bridge. Exported on all platforms so that
    // Dart can attach a NativeFinalizer for zero-copy video frame ownership.
    // On Windows this is critical (CRT free != CoTaskMemFree); on other
    // platforms it wraps the standard free().
    try {
      nativeFree = _dylib.lookup<NativeFunction<FlutterEapFreeNative>>('flutter_eap_free').asFunction();
      nativeFreeFinalizer = _dylib.lookup<NativeFinalizerFunction>('flutter_eap_free');
    } catch (_) {
      nativeFree = null;
      nativeFreeFinalizer = null;
    }

    // Multi-engine fan-out symbols (all pull-mode platform bridges; absent on
    // iOS and in older single-slot desktop binaries).
    try {
      addCallbacks = _dylib.lookup<NativeFunction<FlutterEapAddCallbacksNative>>('flutter_eap_add_callbacks').asFunction();
      removeCallbacks = _dylib.lookup<NativeFunction<FlutterEapRemoveCallbacksNative>>('flutter_eap_remove_callbacks').asFunction();
    } catch (_) {
      addCallbacks = null;
      removeCallbacks = null;
    }

    // Engine-token add (separate try block: an intermediate Android binary
    // exports the plain add but predates the engine variant).
    try {
      addCallbacksEngine = _dylib.lookup<NativeFunction<FlutterEapAddCallbacksEngineNative>>('flutter_eap_add_callbacks_engine').asFunction();
    } catch (_) {
      addCallbacksEngine = null;
    }

    // Skyle Link glue symbols - ship in every current platform shim, but stay
    // nullable so the Dart layer degrades gracefully against an older binary
    // (all Skyle Link features then report unavailable instead of crashing).
    try {
      linkGlueInstall = _dylib.lookup<NativeFunction<FlutterEapLinkGlueInstallNative>>('flutter_eap_link_glue_install').asFunction();
      setLinkIdentity = _dylib.lookup<NativeFunction<FlutterEapSetIdentityNative>>('flutter_eap_set_identity').asFunction();
      setSupervisorEnabled = _dylib.lookup<NativeFunction<FlutterEapSetSupervisorEnabledNative>>('flutter_eap_set_supervisor_enabled').asFunction();
      getSupervisorMode = _dylib.lookup<NativeFunction<FlutterEapGetSupervisorModeNative>>('flutter_eap_get_supervisor_mode').asFunction();
      linkSetSuspended = _dylib.lookup<NativeFunction<FlutterEapLinkSetSuspendedNative>>('flutter_eap_link_set_suspended').asFunction();
      getSuspensionState = _dylib.lookup<NativeFunction<FlutterEapGetSuspensionStateNative>>('flutter_eap_get_suspension_state').asFunction();
    } catch (_) {
      linkGlueInstall = null;
      setLinkIdentity = null;
      setSupervisorEnabled = null;
      getSupervisorMode = null;
      linkSetSuspended = null;
      getSuspensionState = null;
    }
  }
}
